// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer anchors to the left 1`] = `
.emotion-0 {
  background-color: #fff;
  bottom: 0;
  overflow-x: hidden;
  padding: 20px 0;
  position: fixed;
  top: 79px;
  z-index: 1200;
  left: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 27px 0 34px;
  opacity: 0;
  padding-left: 28px;
  -webkit-transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
}

.emotion-2 {
  border-radius: 6px;
  height: 32px;
  width: 32px;
  margin-right: 8px;
}

.emotion-3 {
  color: #bfc5d2;
  display: block;
  white-space: nowrap;
}

.emotion-4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-0"
    data-testid="drawer"
    style="width: 80px;"
  >
    <div
      class="emotion-1"
    >
      <img
        alt="Terri Paucek"
        class="emotion-2"
        data-testid="avatar"
        src="https://cdn.fakercloud.com/avatars/iqonicd_128.jpg"
      />
      <div>
        <span>
          Welcome
        </span>
        <span
          class="emotion-3"
        >
          Terri Paucek
        </span>
      </div>
    </div>
    <nav>
      <ul
        class="emotion-4"
      />
    </nav>
  </div>
</div>
`;

exports[`Drawer anchors to the right 1`] = `
.emotion-0 {
  background-color: #fff;
  bottom: 0;
  overflow-x: hidden;
  padding: 20px 0;
  position: fixed;
  top: 79px;
  z-index: 1200;
  right: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 27px 0 34px;
  opacity: 0;
  padding-left: 28px;
  -webkit-transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
}

.emotion-2 {
  border-radius: 6px;
  height: 32px;
  width: 32px;
  margin-right: 8px;
}

.emotion-3 {
  color: #bfc5d2;
  display: block;
  white-space: nowrap;
}

.emotion-4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-0"
    data-testid="drawer"
    style="width: 80px;"
  >
    <div
      class="emotion-1"
    >
      <img
        alt="Charlie Jacobs"
        class="emotion-2"
        data-testid="avatar"
        src="https://cdn.fakercloud.com/avatars/m_kalibry_128.jpg"
      />
      <div>
        <span>
          Welcome
        </span>
        <span
          class="emotion-3"
        >
          Charlie Jacobs
        </span>
      </div>
    </div>
    <nav>
      <ul
        class="emotion-4"
      />
    </nav>
  </div>
</div>
`;

exports[`Drawer expands when opened 1`] = `
.emotion-0 {
  background-color: #fff;
  bottom: 0;
  overflow-x: hidden;
  padding: 20px 0;
  position: fixed;
  top: 79px;
  z-index: 1200;
  left: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 27px 0 34px;
  opacity: 1;
  padding-left: 28px;
  -webkit-transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
}

.emotion-2 {
  border-radius: 6px;
  height: 32px;
  width: 32px;
  margin-right: 8px;
}

.emotion-3 {
  color: #bfc5d2;
  display: block;
  white-space: nowrap;
}

.emotion-4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-0"
    data-testid="drawer"
    style="width: 215px;"
  >
    <div
      class="emotion-1"
    >
      <img
        alt="Beulah Kulas"
        class="emotion-2"
        data-testid="avatar"
        src="https://cdn.fakercloud.com/avatars/nerdgr8_128.jpg"
      />
      <div>
        <span>
          Welcome
        </span>
        <span
          class="emotion-3"
        >
          Beulah Kulas
        </span>
      </div>
    </div>
    <nav>
      <ul
        class="emotion-4"
      />
    </nav>
  </div>
</div>
`;

exports[`Drawer is closed by default 1`] = `
.emotion-0 {
  background-color: #fff;
  bottom: 0;
  overflow-x: hidden;
  padding: 20px 0;
  position: fixed;
  top: 79px;
  z-index: 1200;
  left: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 27px 0 34px;
  opacity: 0;
  padding-left: 28px;
  -webkit-transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity,300ms cubic-bezier(0.4, 0, 0.2, 1);
}

.emotion-2 {
  border-radius: 6px;
  height: 32px;
  width: 32px;
  margin-right: 8px;
}

.emotion-3 {
  color: #bfc5d2;
  display: block;
  white-space: nowrap;
}

.emotion-4 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class="emotion-0"
    data-testid="drawer"
    style="width: 80px;"
  >
    <div
      class="emotion-1"
    >
      <img
        alt="Duane Farrell"
        class="emotion-2"
        data-testid="avatar"
        src="https://cdn.fakercloud.com/avatars/nicklacke_128.jpg"
      />
      <div>
        <span>
          Welcome
        </span>
        <span
          class="emotion-3"
        >
          Duane Farrell
        </span>
      </div>
    </div>
    <nav>
      <ul
        class="emotion-4"
      />
    </nav>
  </div>
</div>
`;
